--- a/css/index.css
+++ b/css/index.css
@@ -61,16 +61,21 @@ a {
     margin: 10vh auto;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (min-width: 601px) and (max-width: 900px) {
     .container {
         display: block;
         width: 50%;
     }
 }
 
+@media screen and (max-width: 600px) {
+    .container {
+        display: block;
+        width: 70%;
+    }
+}
 
 /**************/
-
 
 /* 3. Sedans Section
 /**************/
