--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,6 @@
 
 body {
     font-size: 15px;
-    padding: 10% 0 10% 0;
 }
 
 a {
@@ -59,7 +58,7 @@ a {
 .container {
     display: flex;
     max-width: 850px;
-    margin: auto;
+    margin: 10% auto;
 }
 
 @media screen and (min-width: 601px) and (max-width: 900px) {
